# navi_wingbody_detection

navi_wingbody_detection/: CMakeLists.txt
navi_wingbody_detection/include/navi_wingbody_detection/: object_detector.hpp
navi_wingbody_detection/launch/: obb_angle.launch.py  object_detector.launch.py  pc_tf_repub.launch.py
navi_wingbody_detection/scripts/: imu_viz_node.py  obb_angle_error_node.py
navi_wingbody_detection/src/: lshaped_fitting.cpp  obb_tracker_main.cpp  object_detector.cpp  sort_tracker.cpp
navi_wingbody_detection/src/bindings/: lshape_bindings.cpp
ros/: CMakeLists.txt
ros/include/patchworkpp/: dbscan_obb_node.hpp  lshaped_fitting.hpp  object_detector.hpp
ros/launch/: patchworkpp.launch.py
ros/navi_object_detection/: CMakeLists.txt  package.xml
ros/navi_object_detection/include/navi_object_detection/: lshaped_fitting.hpp  object_detector.hpp  object_tracker.hpp
ros/navi_object_detection/launch/: object_detector.launch.py  object_tracker.launch.py
ros/navi_object_detection/src/: lshaped_fitting.cpp  obb_extractor_main.cpp  obb_tracker_main.cpp  object_detector.cpp  object_tracker.cpp  sort_tracker.cpp
ros/navi_wingbody_detection/: CMakeLists.txt  package.xml
ros/navi_wingbody_detection/include/navi_wingbody_detection/: lshaped_fitting.hpp  object_detector.hpp  object_tracker.hpp  sort_tracker.hpp
ros/navi_wingbody_detection/launch/: compare.launch.py  dbscan_obb.launch.py  imu_filtered.launch.py  imu_viz.launch.py  object_detector.launch.py  object_detector_py.launch.py  object_tracker.launch.py
ros/navi_wingbody_detection/scripts/: check_error_table.py  comparer_node.py  object_detector.py  pc_tf_repub.py
ros/navi_wingbody_detection/src/: lshaped_fitting.cpp  obb_extractor_main.cpp  object_detector.cpp  object_tracker.cpp  pc_tf_repub_node.cpp
ros/patchworkpp/: CMakeLists.txt  package.xml
ros/patchworkpp/launch/: dbscan_obb.launch.py  object_detector.launch.py  patchworkpp.launch.py
ros/patchworkpp/rviz/: patchworkpp.rviz
ros/patchworkpp/src/: lshaped_fitting.cpp
ros/scripts/: dbscan_obb.py
ros/src/: obb_extractor_main.cpp  object_detector.cpp
