<?xml version="1.0"?>
<package format="3">
  <name>navi_wingbody_detection</name>
  <version>1.0.4</version>
  <description>navi_wingbody_detection ROS 2</description>
  <maintainer email="bero@navifra.com">KyeongBeen Park</maintainer>
  <license>GPL-3.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- ROS deps -->
  <depend>rcutils</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>pcl_conversions</depend>
  <depend>pcl_msgs</depend>

  <!-- Third-party libs -->
  <build_depend>eigen</build_depend>
  <build_depend>libopencv-dev</build_depend>
  <exec_depend>libopencv-dev</exec_depend>

  <!-- pybind11 / Python dev headers -->
  <build_depend>pybind11-dev</build_depend>
  <build_depend>python3-dev</build_depend>
  <exec_depend>python3</exec_depend>

  <!-- Python runtime tools -->
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>ros2launch</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
