<?xml version="1.0"?>
<package format="3">
  <name>patchworkpp</name>
  <version>0.1.0</version>
  <description>Patchwork++ ROS 2 Wrapper</description>
  <maintainer email="sj98lee@kaist.ac.kr">Seungjae Lee</maintainer>
  <license>GPL-3.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rcutils</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>visualization_msgs</depend>
  <depend>pcl_conversions</depend>
  <depend>pcl_msgs</depend>        <!-- 일부 환경에서 필요할 수 있어 권장 -->
  <depend>eigen</depend>
  <depend>libopencv-dev</depend>
  <depend>tf2_geometry_msgs</depend>

  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>ros2launch</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
